<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showResult"
        app:layout_constraintVertical_bias="0.95">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="clearBTN"
                android:text="@string/button_clear"
                android:textColor="@color/orange"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonBrackets"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="paraBTN"
                android:text="@string/button_braces"
                android:textColor="@color/btn_green_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonModule"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="powerBTN"
                android:text="@string/button_power"
                android:textColor="@color/btn_green_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divideBTN"
                android:text="@string/button_divide"
                android:textColor="@color/btn_green_light"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenBTN"
                android:text="@string/button_7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightBTN"
                android:text="@string/button_8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="nineBTN"
                android:text="@string/button_9"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiplyBTN"
                android:text="@string/button_multiply"
                android:textColor="@color/btn_green_light"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourBTN"
                android:text="@string/button_4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fiveBTN"
                android:text="@string/button_5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixBTN"
                android:text="@string/button_6"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="subtractBTN"
                android:text="@string/button_minus"
                android:textColor="@color/btn_green_light"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="oneBTN"
                android:text="@string/button_1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twoBTN"
                android:text="@string/button_2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threeBTN"
                android:text="@string/button_3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="addBTN"
                android:text="@string/button_plus"
                android:textColor="@color/btn_green_light"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonNegative"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusMinusBTN"
                android:text="@string/button_Negative"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zeroBTN"
                android:text="@string/button_0"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="decimalBTN"
                android:text="@string/button_dot"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#43a047"
                android:onClick="equalBTN"
                android:text="@string/button_Equal"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autoSizeMaxTextSize="50sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:autofillHints="false"
        android:inputType="numberSigned|numberDecimal"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <TextView
        android:id="@+id/showResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNumber" />

    <ImageButton
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/circle"
        android:contentDescription="@string/backspace"
        android:onClick="backSpaceBTN"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showResult"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/backspace" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showResult"
        app:layout_constraintVertical_bias="0.93" />
</androidx.constraintlayout.widget.ConstraintLayout>
